- [NEW] - Settings GUI - Added options to switch distance unit
- [NEW] - Added Linux manpage (PR #791 @dawkagaming)
- [NEW] - Added a link to the GitHub release notes under Help-Whats New
- [NEW] - Added workaround for WriteLog - always call callbook lookups (PR #833 @sjwoodr)
- [NEW] - Statistics - Added Not-Confirmed filter (PR #836 @aa5sh)
- [CHANGED] - Settings - Added network loop detection for WSJTX Forward (issue #815 @aa5sh @foldynl)
- [CHANGED] - Rotator - Rotator timeout is set to 5s (PR #823 @aa5sh)
- [CHANGED] - Double Spin Boxes - the decimal separator is forced to be a period
- Fixed QSODetail - Anti-meridian bug on map (issue #786)
- Fixed Statistics: Center maps on QTH longitude (issue #824)
- Fixed OmniRig disconnecting when its status changed unexpectedly (issue #832)

2025/10/31 - 0.46.2
- Fixed Spaces after QRZ.com name (issue #767)
- Fixed SPID Rot1Prog Rotator more 360 deg (issue #775)
- Fixed build instructions on Debian (PR #777 @leventelist)
- Fixed Bandmap truncated output despite having space (issue #779)
- Fixed Statistics - Anti-meridian bug on map (issue #786)
- Fixed Binary file in the tarballs (issue #794)
- Fixed LOTW and eQSL upload status updated even when nothing is uploaded (issue #807)
- Fixed Imported QSOs contain incorrect My DXCC info (issue #812)
- Fixed Statistics Dialog does not show confirmed grids

2025/09/26 - 0.46.1
- Fixed QSO filter incorrectly displays inserted date (issue #752)
- Fixed Logbook Search Icon is not centered (issue #753)
- Fixed Using CQRLog API Key for Clublog (issue #759)
- Fixed Online Service Password leaking via debug files (issue #760)
- Fixed Tabs are not showed properly (PR #762 @aa5sh)
- Fixed inability to edit Power in QSO Detail (issue #763)

2025/09/12 - 0.46.0
- [NEW] - NewContact: POTA/SOTA/WWFF/IOTA info is taken from the nearest spot (@aa5sh @foldynl)
- [NEW] - DXSpots are sent to Flex Radio (PR #694 @aa5sh)