@@ -165,6 +165,23 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="leftButton">
+       <property name="maximumSize">
+        <size>
+         <width>15</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="text">
+        <string notr="true"/>
+       </property>
+       <property name="icon">
+        <iconset resource="../res/icons/icons.qrc">
+         <normaloff>:/icons/baseline-play_back-24px.svg</normaloff>:/icons/baseline-play_back-24px.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="userButton_1">
        <property name="enabled">
         <bool>false</bool>
@@ -253,6 +270,23 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="rightButton">
+       <property name="maximumSize">
+        <size>
+         <width>15</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="text">
+        <string notr="true"/>
+       </property>
+       <property name="icon">
+        <iconset resource="../res/icons/icons.qrc">
+         <normaloff>:/icons/baseline-play_arrow-24px.svg</normaloff>:/icons/baseline-play_arrow-24px.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer_3">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -292,7 +326,9 @@
    <header>ui/component/BaseDoubleSpinBox.h</header>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../res/icons/icons.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>gotoButton</sender>
@@ -454,6 +490,38 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>rightButton</sender>
+   <signal>clicked()</signal>
+   <receiver>RotatorWidget</receiver>
+   <slot>shortcutProfileIncrease()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>335</x>
+     <y>241</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>193</x>
+     <y>128</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>leftButton</sender>
+   <signal>clicked()</signal>
+   <receiver>RotatorWidget</receiver>
+   <slot>shortcutProfileDecrease()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>84</x>
+     <y>241</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>193</x>
+     <y>128</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>gotoPosition()</slot>
@@ -466,5 +534,7 @@
   <slot>qsoBearingSP()</slot>
   <slot>qsoBearingLP()</slot>
   <slot>setRequestedAz(double)</slot>
+  <slot>shortcutProfileIncrease()</slot>
+  <slot>shortcutProfileDecrease()</slot>
  </slots>
 </ui>
